--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,7 @@
 
 <body>
     <header></header>
-    <main>
-        <h1>test</h1>
-    </main>
+    <main></main>
     <footer></footer>
 
     <script src="components/Formulaire.js"></script>
