--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
+<html>
 
-  <script src="entry.js"></script>	
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+    <header></header>
+    <main></main>
+    <footer></footer>
+
+    <!--
+    <script src="components/Formulaire.js"></script>
+    <script src="toolkit.js"></script>
+    <script src="components/Menu.js"></script>
+    <script src="components/Header.js"></script>
+    <script src="components/Logo.js"></script>
+    <script src="components/Article.js"></script>
+    <script src="components/Counter.js"></script>
+    <script src="components/CategoriesList.js"></script>
+    <script src="components/socialNetworks.js"></script>
+    <script src="components/Footer.js"></script>
+    -->
+    <script src="script.js"></script>
 </body>
+
 </html>
