--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <div id="wrapper"></div>
-  <script src="script.js"></script>
+  <script src="bundle.js"></script>
 </body>
 </html>
